:url-repo: https://github.com/asciidoctor/asciidoctorj
:icons: font
:star: icon:star[role=red]
ifndef::icons[]
:star: &#9733;
endif::[]

This document provides a high-level view of the changes introduced in AsciidoctorJ by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

== 2.5.8 (2023-04-15)

Improvement::

* Add 'standalone' option, deprecates 'headerFooter' (#1160) (@abelsromero)
* Upgrade to asciidoctorj-diagram 2.2.7

Bug Fixes::

* Fix destinationDir not having effect. Deprecate destinationDir in favour of toDir (#853, #941) (@abelsromero)
* Fix ConcurrentModificationException when converting to stream concurrently (#1158) (@rocketraman)

== 2.5.7 (2022-10-21)

Improvement::

* Upgrade to asciidoctorj 2.0.18 (#1126)
* Upgrade to asciidoctorj-diagram 2.2.4 (#1140)
* Upgrade to jruby 9.3.10.0 (#1138) (@alexlevinfr)


Build / Infrastructure::

* Replace use of deprecated 'numbered' attribute by 'sectnums' (#1127) (@abelsromero)

== 2.5.6 (2022-09-19)

Improvement::

* Add command line option --failure-level to force non-zero exit code from AsciidoctorJ CLI if specified logging level is reached. (#1115) (@pasieronen)
* Upgrade to JRuby 9.3.8.0 (#1117)
* Upgrade to Rouge 3.30.0 (#1118)

Bug Fixes::

* Avoid throwing an exception when using AsciidoctorJ CLI and reading input from stdin (#1105) (@AlexCzar)

== 2.5.5 (2022-07-26)

Improvement::

* Upgrade to Rouge 3.29.0 (#1103)

Bug Fixes::

* Cell nodes do not inherit from StructuralNode (#1086) (@rahmanusta)

== 2.5.4 (2022-06-30)

Improvement::

* Upgrade to asciidoctorj-diagram 2.2.3 (#1091)
* Upgrade to jcommander 1.81 (#1079)
* Upgrade to JRuby 9.3.4.0 (#1085)
* Upgrade to Rouge 3.28.0 (#1085)

Bug Fixes::

* Make DescriptionList.getBlocks() return null instead of a List of DescriptionListItems resulting in a ClassCastException (#1082) (@someth2say)

Build Improvement::

* Upgrade to gradle 7.4.2 (#1086)