@@ -1,7 +1,7 @@
 package org.asciidoctor.categories;
 
 /**
- * Defines tests that are executed within a "polluted" environemnt, that is environment variables GEM_PATH
+ * Defines tests that are executed within a "polluted" environment, that is environment variables GEM_PATH
  * and GEM_HOME will be set.
  */
 public class Polluted {
